modificaciones en mi codigo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jose Manuel Guerra</title>
+    <title>Anya Baque</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
     <main>
         <header>
-            <div class="header-left">
+            <div class="encabezado-izq">
                 <img
                     src="https://static.wixstatic.com/media/2e1127_392b27ef188e4f25ae65c0b035f56176~mv2.png/v1/fill/w_112,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/eidoslogo.png">
             </div>
@@ -29,43 +29,43 @@
             </div>
         </header>
         <section id="foto">
-            <img src="img/pexels.jpg" class="portada">
+            <img src="img/yo.jpg" class="fachada">
         </section>
         <section id="presentacion">
-            <h2>Hola! soy Jose</h2>
+            <h2>¡Hola! soy Anya </h2>
             <article>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure corrupti dolorem quisquam distinctio
-                    provident ipsa. Cumque accusantium maiores molestiae facilis in veniam optio quod ipsa a provident
-                    quia magnam non dolores repellendus tenetur corrupti fugit voluptates, vel minima quos eum nobis!
-                    Qui aperiam voluptas natus, ut illo incidunt ex suscipit autem eum laborum facilis possimus, harum
-                    inventore. Iusto vel eius, corrupti aspernatur ea ipsa saepe soluta, quibusdam, earum nisi totam?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti illum, sunt magnam laboriosam,
+                    provident quisquam repudiandae error facilis iste perspiciatis earum doloremque. Possimus cum cumque
+                    dolore veritatis maxime minima rerum saepe, doloremque, reprehenderit sequi, reiciendis corporis
+                    deserunt corrupti eos! Assumenda ipsam beatae odit praesentium sunt architecto ex pariatur, veniam
+                    quis laboriosam expedita ducimus quo provident a ab iste blanditiis. Quo sequi voluptate maxime
+                    optio quos praesentium voluptates fuga distinctio fugit!
                 </p>
             </article>
         </section>
-        <section id="boton">
+        <section id="button">
             <a href="">Descarga mi cv</a>
         </section>
-        <section id="caja">
+        <section id="charla">
             <h2>Hablemos</h2>
             <article>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolore odit, accusamus magni
-                    corporis quisquam quidem suscipit eum at rem dolor qui optio ratione quis repellendus veritatis
-                    nostrum adipisci commodi quaerat recusandae provident dolorem tenetur. Soluta ullam quis quod.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti accusamus repellendus quo, totam asperiores illum sed hic perferendis in ducimus consequatur. Omnis corrupti in unde quaerat odio beatae ipsa ratione nobis. Nam alias magnam voluptates voluptatibus quibusdam quos ipsam qui?
                 </p>
             </article>
         </section>
-        <section id="contactos">
+        <section id="contactame">
             <lu>
+                
+                <li>
+                    <img src="img/linkedin.png" class="linkedIn">
+                </li>
+                <li>
+                    <img src="img/mail.png" class="correo">
+                </li>
                 <li>
                     <img src="img/github.png" class="git">
-                </li>
-                <li>
-                    <img src="img/linkedin.png" class="linked">
-                </li>
-                <li>
-                    <img src="img/mail.png" class="mail">
                 </li>
 
             </lu>
@@ -73,7 +73,7 @@
     </main>
 </body>
 <footer>
-    codigo latam
+    Código Latam
 </footer>
 
 </html>
