se hacen ultimas modificaciones en el HTML

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
                     src="https://static.wixstatic.com/media/2e1127_392b27ef188e4f25ae65c0b035f56176~mv2.png/v1/fill/w_112,h_50,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/eidoslogo.png">
             </div>
             <div class="header-right">
-                <h3>inicio</h3>
-                <h3>contacto</h3>
+                <a href="#presentacion">
+                    <h2>inicio</h2>
+                </a>
+                <a href="#contactame">
+                    <h2>contacto</h2>
+                </a>
             </div>
         </header>
         <section id="foto">
@@ -51,13 +55,15 @@
             <h2>Hablemos</h2>
             <article>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti accusamus repellendus quo, totam asperiores illum sed hic perferendis in ducimus consequatur. Omnis corrupti in unde quaerat odio beatae ipsa ratione nobis. Nam alias magnam voluptates voluptatibus quibusdam quos ipsam qui?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti accusamus repellendus quo, totam
+                    asperiores illum sed hic perferendis in ducimus consequatur. Omnis corrupti in unde quaerat odio
+                    beatae ipsa ratione nobis. Nam alias magnam voluptates voluptatibus quibusdam quos ipsam qui?
                 </p>
             </article>
         </section>
         <section id="contactame">
             <lu>
-                
+
                 <li>
                     <img src="img/linkedin.png" class="linkedIn">
                 </li>
